--- a/app/src/main/res/layout/activity_address.xml
+++ b/app/src/main/res/layout/activity_address.xml
@@ -9,39 +9,25 @@
 
     <include layout="@layout/toolbar_common" />
 
-    <ImageView
-        android:id="@+id/img_bag"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/top_nav_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/dim_160"
-        android:background="@null"
-        android:src="@drawable/bag" />
+        android:layout_below="@+id/toolbar_common">
 
-    <com.localfriend.fonts.CustomFontTextView
-        android:id="@+id/tv_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/img_bag"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/dim_16"
-        android:text="You have no saved addresses"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="@dimen/dim_16"
-        app:textStyle="@integer/roboto_medium" />
+        <include layout="@layout/address_top_nav"></include>
+    </LinearLayout>
 
-    <com.localfriend.fonts.CustomFontTextView
-        android:id="@+id/tv_lets_get_started"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_label"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/dim_10"
-        android:text="Tell us where you want your "
-        android:textSize="@dimen/dim_16"
-        app:textStyle="@integer/roboto_medium" />
+    <FrameLayout
+        android:id="@+id/service_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/top_nav_layout"
+        android:background="@null">
 
-    <com.localfriend.fonts.CustomFontTextView
+    </FrameLayout>
+
+   <!-- <com.localfriend.fonts.CustomFontTextView
         android:id="@+id/tv_add_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -53,5 +39,5 @@
         android:text="Add New Address"
         android:textColor="@color/white"
         android:textSize="@dimen/dim_18"
-        app:textStyle="@integer/roboto_medium" />
+        app:textStyle="@integer/roboto_medium" />-->
 </RelativeLayout>
