--- a/app/src/main/res/layout/breakfast_item.xml
+++ b/app/src/main/res/layout/breakfast_item.xml
@@ -35,20 +35,21 @@
         </android.support.v7.widget.CardView>
     </FrameLayout>
 
-    <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
+    <com.localfriend.fonts.CustomFontTextView
         android:id="@+id/tv_breakfast_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dim_20"
         android:layout_marginTop="@dimen/dim_210"
-        android:background="#B4000000"
+        android:background="@drawable/tv_trans_bg"
         android:gravity="center"
         android:padding="@dimen/dim_8"
         android:text="Aloo Pratha"
         android:textColor="@color/white"
-        android:textSize="@dimen/dim_16" />
+        android:textSize="@dimen/dim_16"
+        app:textStyle="@integer/roboto_medium" />
 
-    <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
+    <com.localfriend.fonts.CustomFontTextView
         android:id="@+id/tv_breakfast_cost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -61,9 +62,10 @@
         android:paddingTop="@dimen/dim_5"
         android:text="Rs 30"
         android:textColor="@color/white"
-        android:textSize="@dimen/dim_18" />
+        android:textSize="@dimen/dim_18"
+        app:textStyle="@integer/roboto_medium" />
 
-    <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
+    <com.localfriend.fonts.CustomFontTextView
         android:id="@+id/tv_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -77,5 +79,6 @@
         android:paddingTop="@dimen/dim_8"
         android:text="+"
         android:textColor="@color/white"
-        android:textSize="@dimen/dim_20" />
+        android:textSize="@dimen/dim_20"
+        app:textStyle="@integer/roboto_medium" />
 </RelativeLayout>
