--- a/app/src/main/res/layout/toolbar_common.xml
+++ b/app/src/main/res/layout/toolbar_common.xml
@@ -4,10 +4,10 @@
     android:id="@+id/toolbar_common"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    android:background="@drawable/main_gradient_bg">
+    android:background="@drawable/main_gradient_bg"
+    app:theme="@style/ToolbarStyle">
 
-    <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
+    <com.localfriend.fonts.CustomFontTextView
         android:id="@+id/toolbar_title_common"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -15,5 +15,6 @@
         android:text=""
         android:textColor="@color/white"
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:textStyle="@integer/roboto_medium" />
 </android.support.v7.widget.Toolbar>
